[package]
name = "mlua-stdlib"
description = "Standard library bindings for mlua"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luau = ["mlua/luau"]

[dependencies]
mlua = { version = "0.11" }

[dev-dependencies]
mlua = { version = "0.11", features = ["macros"] }
