[package]
name = "mlua-stdlib"
description = "Standard library bindings for mlua"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luau = ["mlua/luau"]
send = ["mlua/send"]
vendored = ["mlua/vendored"]

json = ["mlua/serde", "dep:ouroboros", "dep:serde", "dep:serde_json"]
regex = ["dep:regex", "dep:ouroboros", "dep:quick_cache"]

[dependencies]
mlua = { version = "0.11" }
ouroboros = { version = "0.18", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
owo-colors = "4"
regex = { version = "1.0", optional = true }
quick_cache = { version = "0.6", optional = true }
