[package]
name = "mlua-stdlib"
description = "Standard library bindings for mlua"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luau = ["mlua/luau"]
async = ["mlua/async", "dep:tokio", "dep:tokio-util"]
send = ["mlua/send"]
vendored = ["mlua/vendored"]

json = ["mlua/serde", "dep:ouroboros", "dep:serde", "dep:serde_json"]
regex = ["dep:regex", "dep:ouroboros", "dep:quick_cache"]
yaml = ["mlua/serde", "dep:ouroboros", "dep:serde", "dep:serde_yaml"]
http = ["dep:http"]
task = ["async"]

[dependencies]
mlua = { version = "0.11" }
ouroboros = { version = "0.18", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
owo-colors = "4"
regex = { version = "1.0", optional = true }
quick_cache = { version = "0.6", optional = true }

# http
http = { version = "1.3", optional = true }

# tokio
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
